--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -38,8 +38,20 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'kingthings_trypewriter_2Rg', serif;
+  font-weight: bold;
 }
 
 header {
   border-top: 9px solid #222222;
+}
+
+h1 {
+  font-family: 'kingthings_trypewriter_2Rg', serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'kingthings_trypewriter_2Rg', serif;
 }
