--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,22 @@
 
     <br class="clear" />
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+              <%= link_to "But wait, there's more!", "#", class: "next-quote" %>
+          </div>
+          <div class="col-6 footer-blurb">
+            Carefully collected by <a href="https://github.com/CCrowRun">Carrie Crow</a><br />
+            Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
