--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,22 @@
   <body>
     <header class="row">
       <div class="col-3">
-        <div class="circle">
-          <br />
-          EEK
-          <br />
-          AHH
-          <br />
-          OMG
-        </div>
-      </div>
+        <%= link_to root_path, class: 'logo' do %>
+          <div class="circle">
+            <br />
+            EEK
+            <br />
+            AHH
+            <br />
+            OMG
+          </div>
+        <% end %>
+      </div>   
       <div class="col-4 slogan">
         Staying alive  and genre aware since 2019
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
@@ -42,7 +44,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-              <%= link_to "But wait, there's more!", "#", class: "next-quote" %>
+              <%= link_to "But wait, there's more!", root_path, class: "next-quote" %>
           </div>
           <div class="col-6 footer-blurb">
             Carefully collected by <a href="https://github.com/CCrowRun">Carrie Crow</a><br />
