Refactored new quote form into a modal

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,7 +1,7 @@
 <div class="col-10 offset-1 about">
   <h1>About Splurty</h1>
   <p>
-  Splurty was built by <a target="_blank" href="http://github.com/CCrowRun">Carrie Crow</a>, a web developers on a mission to bring awareness to the absurd behaviors that could get you axed by a horror film villain
+  Splurty was built by <a target="_blank" href="http://github.com/CCrowRun">Carrie Crow</a>, a web developer on a mission to bring awareness to the absurd behaviors that could get you axed by a horror film villain.
   </p>
   <br />
   <p>
