--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,9 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
             <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What is the advice you have?", placeholder: "Never say 'Who's there?" %>
+              <br />
+              <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Ghostface" %>
             </div>
             <div class="modal-footer">
               <%= f.submit 'Create', class: 'btn btn-danger' %>
